src/objects/zoom_app__Zoom__c.object
<CustomObject>
    <fields>
        <fullName>zoom_app__External_Zoom_Meetings__c</fullName>
        <label>External Zoom Meetings Schedule Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Get_Zoom_Meeting_Information__c</fullName>
        <label>Zoom Metrics Schedule Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Login_Type__c</fullName>
        <label>Login Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_API_Key__c</fullName>
        <inlineHelpText>Zoom API Key</inlineHelpText>
        <label>Zoom API Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_API_Secret__c</fullName>
        <inlineHelpText>Zoom Secret Key</inlineHelpText>
        <label>Zoom API Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_url__c</fullName>
        <inlineHelpText>Zoom Url e.g. http://zoom.us/j/</inlineHelpText>
        <label>Zoom url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Zoom</label>
    <nameField>
        <label>Zoom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>